# jolt-eddsa

./: Cargo.toml
guest/: Cargo.toml
guest/src/: lib.rs
src/: main.rs
